--- a/sass/grid.scss
+++ b/sass/grid.scss
@@ -36,4 +36,12 @@
 
 // Columns
 // -------
+%col {
+  position: relative;
+  float: left;
+  min-height: 1px;
+  padding-left: ($grid-gutter / 2);
+  padding-right: ($grid-gutter / 2);
+}
+
 @include make-columns();
